kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/variableNames1.sem
function myStuff.myFunction(): Integer {
  let myVar: Integer = Integer."1"
  let myVar: Integer = Integer."2"
  myVar
}
